Error Mitigation/MagiCoder/Data/javax_imageio/javax_imageioOutputResult.txt
Sample: IIOImage_2
----------------------------------------------------------------
output:
./Data/javax_imageio/javaFiles/IIOImage_2.java:6: error: reference to IIOImage is ambiguous
        IIOImage iioImage = new IIOImage(null, null, null);
                            ^
  both constructor IIOImage(RenderedImage,List<? extends BufferedImage>,IIOMetadata) in IIOImage and constructor IIOImage(Raster,List<? extends BufferedImage>,IIOMetadata) in IIOImage match
1 error


================================================================

Sample: IIOImage_4
----------------------------------------------------------------
stderr:
javax.imageio.IIOException: Can't read input file!
	at java.desktop/javax.imageio.ImageIO.read(ImageIO.java:1310)
	at IIOImage_4.main(IIOImage_4.java:10)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: ImageIO_1
----------------------------------------------------------------
stderr:
java.io.FileNotFoundException: path_to_your_image.jpg (No such file or directory)
	at java.base/java.io.FileInputStream.open0(Native Method)
	at java.base/java.io.FileInputStream.open(FileInputStream.java:216)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:157)
	at java.base/java.io.FileInputStream.<init>(FileInputStream.java:111)
	at ImageIO_1.main(ImageIO_1.java:9)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.base/java.lang.reflect.Method.invoke(Method.java:569)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.execute(Main.java:419)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.run(Main.java:192)
	at jdk.compiler/com.sun.tools.javac.launcher.Main.main(Main.java:132)

================================================================

Sample: ImageReader_1
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.IllegalArgumentException: input == null!
	at java.desktop/javax.imageio.ImageIO.getImageReaders(ImageIO.java:649)
	at ImageReader_1.main(ImageReader_1.java:11)

================================================================

Sample: ImageReader_2
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.IllegalStateException: Input not set
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.gotoImage(JPEGImageReader.java:505)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.readHeader(JPEGImageReader.java:739)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.getWidth(JPEGImageReader.java:854)
	at ImageReader_2.main(ImageReader_2.java:12)

================================================================

Sample: ImageReader_3
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.IllegalStateException: Input not set
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.gotoImage(JPEGImageReader.java:505)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.readHeader(JPEGImageReader.java:739)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.getHeight(JPEGImageReader.java:868)
	at ImageReader_3.main(ImageReader_3.java:12)

================================================================

Sample: ImageReader_9
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.IllegalStateException: Input not set
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.gotoImage(JPEGImageReader.java:505)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.readHeader(JPEGImageReader.java:739)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.getWidth(JPEGImageReader.java:854)
	at java.desktop/javax.imageio.ImageReader.getTileWidth(ImageReader.java:1342)
	at ImageReader_9.main(ImageReader_9.java:9)

================================================================

Sample: ImageReader_10
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.IllegalStateException: Input not set
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.gotoImage(JPEGImageReader.java:505)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.readHeader(JPEGImageReader.java:739)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.getHeight(JPEGImageReader.java:868)
	at java.desktop/javax.imageio.ImageReader.getTileHeight(ImageReader.java:1363)
	at ImageReader_10.main(ImageReader_10.java:9)

================================================================

Sample: ImageReader_11
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NullPointerException: Cannot invoke "javax.imageio.ImageReader.getTileGridXOffset(int)" because "<local1>" is null
	at ImageReader_11.main(ImageReader_11.java:10)

================================================================

Sample: ImageReader_12
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NullPointerException: Cannot invoke "javax.imageio.ImageReader.getTileGridYOffset(int)" because "<local1>" is null
	at ImageReader_12.main(ImageReader_12.java:11)

================================================================

Sample: ImageReader_17
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.IllegalStateException: Input not set
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.getNumImagesOnThread(JPEGImageReader.java:431)
	at java.desktop/com.sun.imageio.plugins.jpeg.JPEGImageReader.getNumImages(JPEGImageReader.java:407)
	at ImageReader_17.main(ImageReader_17.java:12)

================================================================

Sample: ImageWriteParam_1
----------------------------------------------------------------
output:
./Data/javax_imageio/javaFiles/ImageWriteParam_1.java:14: error: no suitable method found for write(BufferedImage,String,File,ImageWriteParam)
            ImageIO.write(img, "jpg", new File("output.jpg"), param);
                   ^
    method ImageIO.write(RenderedImage,String,ImageOutputStream) is not applicable
      (actual and formal argument lists differ in length)
    method ImageIO.write(RenderedImage,String,File) is not applicable
      (actual and formal argument lists differ in length)
    method ImageIO.write(RenderedImage,String,OutputStream) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: ImageWriteParam_2
----------------------------------------------------------------
output:
./Data/javax_imageio/javaFiles/ImageWriteParam_2.java:13: error: no suitable method found for write(BufferedImage,String,File,ImageWriteParam)
            ImageIO.write(img, "jpg", new File("output.jpg"), param);
                   ^
    method ImageIO.write(RenderedImage,String,ImageOutputStream) is not applicable
      (actual and formal argument lists differ in length)
    method ImageIO.write(RenderedImage,String,File) is not applicable
      (actual and formal argument lists differ in length)
    method ImageIO.write(RenderedImage,String,OutputStream) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

Sample: ImageWriteParam_3
----------------------------------------------------------------
output:
./Data/javax_imageio/javaFiles/ImageWriteParam_3.java:13: error: no suitable method found for write(BufferedImage,String,File,ImageWriteParam)
            ImageIO.write(img, "jpg", new File("output.jpg"), param);
                   ^
    method ImageIO.write(RenderedImage,String,ImageOutputStream) is not applicable
      (actual and formal argument lists differ in length)
    method ImageIO.write(RenderedImage,String,File) is not applicable
      (actual and formal argument lists differ in length)
    method ImageIO.write(RenderedImage,String,OutputStream) is not applicable
      (actual and formal argument lists differ in length)
1 error


================================================================

